app/base/monitoring/prometheus/ingressroutes.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/grafana`) || (Host(`admin.sportdeets.com`) && PathPrefix(`/grafana`))
      kind: Rule
      middlewares:
        - name: grafana-cors
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: grafana-cors
  namespace: monitoring
spec:
  headers:
    accessControlAllowMethods:
      - GET
      - OPTIONS
      - PUT
      - POST
      - DELETE
      - PATCH
    accessControlAllowOriginList:
      - https://admin.sportdeets.com
    accessControlAllowCredentials: true
    accessControlAllowHeaders:
      - "*"
    accessControlMaxAge: 100
    addVaryHeader: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: grafana-headers
  namespace: monitoring
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
      X-Forwarded-Host: "grafana.sportdeets.com"
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-subdomain
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`grafana.sportdeets.com`)
      kind: Rule
      middlewares:
        - name: grafana-headers
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/prometheus`) || (Host(`admin.sportdeets.com`) && PathPrefix(`/prometheus`))
      kind: Rule
      middlewares:
        - name: prometheus-stripprefix
      services:
        - name: kube-prometheus-stack-kps-prometheus
          port: 9090
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: prometheus-stripprefix
  namespace: monitoring
spec:
  stripPrefix:
    prefixes:
      - /prometheus
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/alertmanager`) || (Host(`admin.sportdeets.com`) && PathPrefix(`/alertmanager`))
      kind: Rule
      middlewares:
        - name: alertmanager-stripprefix
      services:
        - name: kube-prometheus-stack-kps-alertmanager
          port: 9093
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: alertmanager-stripprefix
  namespace: monitoring
spec:
  stripPrefix:
    prefixes:
      - /alertmanager
